<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container_new_transaction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/regular_margin">

        <EditText
            android:id="@+id/new_product_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/simple_margin_top"
            android:hint="@string/hint_product_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/new_channel_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_product_number"
            android:layout_marginTop="@dimen/simple_margin_top"
            android:hint="@string/hint_channel"
            android:inputType="number" />

        <EditText
            android:id="@+id/new_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_channel_id"
            android:layout_marginTop="@dimen/simple_margin_top"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/new_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_amount"
            android:layout_marginTop="@dimen/simple_margin_top"
            android:hint="@string/hint_type"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_save_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_type"
            android:layout_marginTop="@dimen/simple_margin_top"
            android:text="@string/txt_btn_save_transaction" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>