<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            android:id="@+id/option_product"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            app:cardElevation="@dimen/menu_card_elevation">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:padding="10dp">

                <TextView
                    android:id="@+id/label_get_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/label_title_menu_product" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_get_product"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_desc_menu_product" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/option_transaction"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/option_product"
            android:layout_marginBottom="20dp"
            app:cardElevation="@dimen/menu_card_elevation">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:padding="10dp">

                <TextView
                    android:id="@+id/label_save_transaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/label_title_menu_transaction" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_save_transaction"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_desc_menu_transaction" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>